# lispy

./: .cz-config.js  .cz.toml  .history  .pre-commit-config.yaml  README.md  fizzbuzz.lisp  fizzbuzz_advanced.lisp  fizzbuzz_loop.lisp  interactive-commit.sh  lispy.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.sh  test_for.lisp  test_lispy.py
example/: fizzbuzz_test.lisp  test.lisp  test_let.lisp
lispy/: __init__.py  builtins.py  evaluator.py  lispy.py  parser.py  tokenizer.py
src/lispy/: __init__.py  builtins.py  parser.py  tokenizer.py
tests/: __init__.py  test_evaluator.py  test_parser.py  test_tokenizer.py
