[project]
name = "lispy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "commitizen>=4.8.3",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
]

# [tool.commitizen] セクションを削除またはコメントアウト
