[project]
name = "lispy"
version = "0.1.0"
description = "A simple LISP interpreter in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "click>=8.2.1",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
lispy = "lispy:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "commitizen>=4.8.3",
    "flake8>=7.3.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lispy"]

[tool.hatch.build]
include = ["src/**"]
exclude = ["tests/**"]

# [tool.commitizen] セクションを削除またはコメントアウト
